data/derived/sp14/progs/unify/prog2613.ml.out
Characters 104-114:
  ((sum / 10) (sum mod 10)) :: a
   ^^^^^^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
